[tool.poetry]
name = "repl_python3_ticketsense-1"
version = "0.1.0"
description = ""
authors = ["AnnleeFores1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
telebot = "^0.0.4"
python-dotenv = "^0.19.2"
selenium = "^4.1.0"
pyTelegramBotAPI = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
